@@ -33,7 +33,7 @@ email=
 kdevprj_version=1.3
 lfv_open_groups=
 make_options=\s-j1
-makefiles=Makefile.am,krusader/Makefile.am,doc/Makefile.am,doc/en/Makefile.am,po/Makefile.am,pics/Makefile.am,doc/pics/Makefile.am,krusader/BookMan/Makefile.am,krusader/Dialogs/Makefile.am,krusader/GUI/Makefile.am,krusader/Konfigurator/Makefile.am,krusader/KViewer/Makefile.am,krusader/MountMan/Makefile.am,krusader/Panel/Makefile.am,krusader/RemoteMan/Makefile.am,krusader/VFS/Makefile.am,krusader/Search/Makefile.am,krusader/Splitter/Makefile.am,krusader/Synchronizer/Makefile.am,krusader/UserMenu/Makefile.am
+makefiles=Makefile.am,krusader/Makefile.am,doc/Makefile.am,doc/en/Makefile.am,po/Makefile.am,pics/Makefile.am,doc/pics/Makefile.am,krusader/BookMan/Makefile.am,krusader/Dialogs/Makefile.am,krusader/GUI/Makefile.am,krusader/Konfigurator/Makefile.am,krusader/KViewer/Makefile.am,krusader/MountMan/Makefile.am,krusader/Panel/Makefile.am,krusader/RemoteMan/Makefile.am,krusader/VFS/Makefile.am,krusader/Search/Makefile.am,krusader/Splitter/Makefile.am,krusader/Synchronizer/Makefile.am,krusader/UserMenu/Makefile.am,krusader/Locate/Makefile.am
 modifyMakefiles=true
 project_name=Krusader
 project_type=mini_kde2
@@ -727,9 +727,28 @@ install=false
 install_location=
 type=HEADER
 
+[krusader/Locate/Makefile.am]
+files=krusader/Locate/locate.cpp,krusader/Locate/locate.h
+sharedlib_LDFLAGS=-version-info 0:0:0
+sharedlib_rootname=Locate
+sub_dirs=
+type=static_library
+
+[krusader/Locate/locate.cpp]
+dist=true
+install=false
+install_location=
+type=SOURCE
+
+[krusader/Locate/locate.h]
+dist=true
+install=false
+install_location=
+type=HEADER
+
 [krusader/Makefile.am]
 files=krusader/krusader.desktop,krusader/lo32-app-krusader.png,krusader/lo16-app-krusader.png,krusader/defaults.h,krusader/kicons.cpp,krusader/kicons.h,krusader/krslots.cpp,krusader/krslots.h,krusader/krusader.cpp,krusader/krusader.h,krusader/krusaderui.rc,krusader/krusaderview.cpp,krusader/krusaderview.h,krusader/lo32-app-krusader2.png,krusader/main.cpp,krusader/resources.h,krusader/x-ace.desktop,krusader/krservices.cpp,krusader/krservices.h,krusader/panelmanager.cpp,krusader/panelmanager.h,krusader/paneltabbar.cpp,krusader/paneltabbar.h
-sub_dirs=BookMan,Dialogs,GUI,Konfigurator,KViewer,MountMan,Panel,RemoteMan,VFS,Search,Splitter,Synchronizer,UserMenu
+sub_dirs=BookMan,Dialogs,GUI,Konfigurator,KViewer,MountMan,Panel,RemoteMan,VFS,Search,Splitter,Synchronizer,UserMenu,Locate
 type=prog_main
 
 [krusader/MountMan/Makefile.am]
