@@ -1,0 +1,13 @@
+####### kdevelop will overwrite this part!!! (begin)##########
+noinst_LIBRARIES = libLocate.a
+
+INCLUDES = $(all_includes)
+
+libLocate_a_METASOURCES = AUTO
+
+libLocate_a_SOURCES = locate.cpp 
+
+
+EXTRA_DIST = locate.cpp locate.h 
+
+####### kdevelop will overwrite this part!!! (end)############
