@@ -30,6 +30,7 @@
   <Menu name="commands" >
    <text>&amp;Commands</text>
    <Action name="find" />
+   <Action name="locate" />
    <Action name="sync dirs" />
    <Separator/>
    <Action name="terminal@home" />
