@@ -1,3 +1,4 @@
+    ADDED: Locate (integrating the findutils-locate package of GNU into Krusader). TEST IT
     ADDED: Heiner's patch for 'logical selection mode' is applied and used as default. TEST IT
     ADDED: application dependency setting in konfigurator
     ADDED: Csaba's new konfigurator is here, boys and girls!
